--- a/force-app/main/default/classes/ExchangeRateApp/ExchangeRateProviders/ExchangeRateProvider.cls
+++ b/force-app/main/default/classes/ExchangeRateApp/ExchangeRateProviders/ExchangeRateProvider.cls
@@ -1,3 +1,3 @@
 public Interface ExchangeRateProvider {
-    Map<String, Map<String, Decimal>> getExchangeRates(Map<String,List<String>> currencies);
+    Map<String, Map<String, Decimal>> getExchangeRates(Map<String, Set<String>> currencies);
 }
