--- a/force-app/main/default/classes/ExchangeRateApp/ExchangeRateService.cls
+++ b/force-app/main/default/classes/ExchangeRateApp/ExchangeRateService.cls
@@ -1,12 +1,61 @@
 public with sharing class ExchangeRateService {
 
-    private ExchangeRateProvider provider;
+    private static ExchangeRateService instance = null;
 
-    public ExchangeRateService(ExchangeRateProvider provider) {
-        this.provider = provider;
+    private ExchangeRateProvider exchangeRateProvider;
+    private Map<String, Map<String, Decimal>> cachedExchangeRates = new Map<String, Map<String, Decimal>>();
+    @TestVisible
+    private Map<String, Set<String>> ratesToRetrieve = new Map<String,Set<String>>();
+
+    private ExchangeRateService() {
+        //TODO CREATE INJECTOR TO GET PROPER CONCRETE CLASS FOR EXCHANGE RATE PROVIDER
+        this.exchangeRateProvider = new FixerIoService();
     }
 
-    public Map<String, Map<String, Decimal>> ExchangeRateService(Map<String,List<String>> currencies) {
-        return this.provider.getExchangeRates(currencies);
+    public static ExchangeRateService getInstance() {
+        if(instance == null) {
+            instance = new ExchangeRateService();
+        }
+        return instance;
+    }
+
+    public Map<String, Map<String, Decimal>> getExchangeRates(Map<String,Set<String>> currencies) {
+        Map<String, Map<String, Decimal>> ratesToReturn = new Map<String, Map<String, Decimal>>();
+        this.ratesToRetrieve = new Map<String,Set<String>>();
+
+        for(String sellCurrencyToGet : currencies.keySet()) {
+            if(this.cachedExchangeRates.containsKey(sellCurrencyToGet)) {
+                Map<String, Decimal> cachedBuyCurrencies = cachedExchangeRates.get(sellCurrencyToGet);
+                for(String buyCurrencyToGet : currencies.get(sellCurrencyToGet)) {
+                    if(cachedBuyCurrencies.keySet().contains(buyCurrencyToGet)) {
+                        if(ratesToReturn.containsKey(sellCurrencyToGet)) {
+                            ratesToReturn.get(sellCurrencyToGet).putAll(cachedBuyCurrencies);
+                        } else {
+                            ratesToReturn.put(sellCurrencyToGet, cachedExchangeRates.get(buyCurrencyToGet));
+                        }
+                    } else {
+                        if(ratesToRetrieve.containsKey(sellCurrencyToGet)) {
+                            ratesToRetrieve.get(sellCurrencyToGet).add(buyCurrencyToGet);
+                        } else {
+                            ratesToRetrieve.put(sellCurrencyToGet, new Set<String>{buyCurrencyToGet});
+                        }
+                    }
+                }
+            } else {
+                ratesToRetrieve.put(sellCurrencyToGet, currencies.get(sellCurrencyToGet));
+            }
+        }
+        Map<String, Map<String, Decimal>> currencyExchangeRates = this.exchangeRateProvider.getExchangeRates(ratesToRetrieve);
+        return this.cachedExchangeRates;
+    }
+
+    private void cacheRetrievedValues(Map<String, Map<String, Decimal>> retrievedValues) {
+        for(String retrievedSellCurrency : retrievedValues.keySet()) {
+            if(this.cachedExchangeRates.containsKey(retrievedSellCurrency)) {
+                this.cachedExchangeRates.get(retrievedSellCurrency).putAll(retrievedValues.get(retrievedSellCurrency));
+            } else {
+                this.cachedExchangeRates.put(retrievedSellCurrency, retrievedValues.get(retrievedSellCurrency));
+            }
+        }
     }
 }
